--- a/JobRegistrationSubmisson/appsettings.json
+++ b/JobRegistrationSubmisson/appsettings.json
@@ -2,12 +2,12 @@
   "ConnectionStrings": {
     "MyConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=JobRegistrationSubmisson;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-  //"Jwt": {
-  //  "Key": "EnricoRustamJepriJepri",
-  //  "Issuer": "JobRegistrationSubmissonServer",
-  //  "Audience": "JobRegistrationSubmissonServer",
-  //  "Subject": "JobRegistrationSubmissonToken"
-  //},
+  "Jwt": {
+    "Key": "EnricoRustamJepriJepri",
+    "Issuer": "JobRegistrationSubmissonServer",
+    "Audience": "JobRegistrationSubmissonServer",
+    "Subject": "JobRegistrationSubmissonToken"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
