Send email confirm

--- a/JobRegistrationSubmisson/appsettings.json
+++ b/JobRegistrationSubmisson/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=InisihFix;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "MyConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NEWNEWNEWEvah;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Jwt": {
     "Key": "EnricoRustamJepriJepri",
